Partially refactored simulation timers.